src/components/styles.scss
@charset "utf-8";

// Set your brand colors
$green: #006838;
$white: #ffffff;
$grey-dark: #4d4d4d;

// More global variables
$img-size: 1200px;

// Update Bulma's global variables
$primary: $green;
$text: $grey-dark;

// Update some of Bulma's component variables
$card-header-background-color: $grey-dark;
$card-header-color: $white;
$navbar-item-hover-color: $primary;
$navbar-tab-active-color: $navbar-item-hover-color;
$navbar-tab-hover-border-bottom-color: $primary;
$navbar-tab-active-border-bottom-color: $navbar-tab-hover-border-bottom-color;
$navbar-tab-active-border-bottom-width: 1px;

@import "~bulma/bulma.sass";

// Handcrafted CSS
footer {
  margin-top: auto;
}

#app-wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.responsive {
  max-width: 100%;
  height: auto;
}

.align-image {
  max-width: $img-size;
  height: auto;
}

.full-height {
  height: 100%;
}

.full-width {
  width: 100%;
}

.justify {
  text-align: justify;
}

.centered {
  display: flex;
  justify-content: center;
  align-items: center;
}

.centered.vertical {
  flex-direction: column;
}

.navbar-burger.is-active {
  color: $primary;
  background-color: $white;
}

@media (min-width: $navbar-breakpoint) {
  .navbar-centered {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

